<resources>
    <string name="app_name">AU Student Handbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AU Student Handbook</string>
    <string name="nav_header_subtitle">info.au@phinmaed.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_uniform">Uniform</string>
    <string name="menu_map">Map</string>
    <string name="menu_scholarship">Scholarship</string>
    <string name="menu_event">Event</string>
    <string name="menu_studentManual">Student Manual</string>
    <string name="menu_faq">FAQ</string>

    <!--
        Others...

        a. About the App
        b. About PHINMA
        c. Developers
        d. Contact Info
    -->
</resources>